add level in user
